crates/rome_formatter/tests/specs/prettier/pipeline-operator/fsharp_style_pipeline_operator.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 121
expression: fsharp_style_pipeline_operator.js

---
# Input
```js
promise
  |> await
  |> x => doubleSay(x, ', ')
  |> capitalize
  |> x => x + '!'
  |> x => new User.Message(x)
  |> x => stream.write(x)
  |> await
  |> console.log;

const result = "hello"
  |> doubleSay
  |> capitalize
  |> exclaim;

const newScore = person.score
  |> double
  |> n => add(7, n)
  |> n => boundScore(0, 100, n);

const user = url
  |> api.get
  |> await
  |> r => r.json()
  |> await
  |> j => j.data.user;

const f = (x) => (x |> (y) => y + 1)
  |> (z) => z * y

const _f = (x) => x
  |> (y) => y + 1
  |> (z) => z * y

const g = (x) => x
  |> (y) => (y + 1 |> (z) => z * y)

const _g = (x) => x
  |> (y => (y + 1 |> (z) => z * y))

const __g = (x) => x
  |> (
    y => {
      return (y + 1 |> (z) => z * y);
    }
  )

const f = x + ((f) => (f |> f));
const f = x |> (f) => f |> f;

```

# Output
```js
promise
  |> await
  |> x
=> doubleSay(x, ', ')
  |> capitalize
  |> x => x + '!'
  |> x => new User.Message(x)
  |> x => stream.write(x)
  |> await
  |> console.log

const result = "hello"
  |> doubleSay
  |> capitalize
  |> exclaim;

const newScore = person.score
  |> double
  |> n
=> add(7, n)
  |> n => boundScore(0, 100, n)

const user = url
  |> api.get
  |> await
  |> r
=> r.json()
  |> await
  |> j => j.data.user

const f = (x) => (x |> (y)
=> y + 1)
  |> (z) => z * y

const _f = (x) => x
  |> (y) => y + 1
  |> (z) => z * y

const g = (x) => x
  |> (y) => (y + 1 |> (z) => z * y)

const _g = (x) => x
  |> (y => (y + 1 |> (z) => z * y))

const __g = (x) => x
  |> (
    y => 
{
  
      return (y + 1 |> (z) 
  => z * y)
}

  )

const f = x + ((f) => (f |> f))
const f = x |> (f)
=> f |> f

```

# Errors
```
error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
  ┌─ fsharp_style_pipeline_operator.js:2:4
  │
2 │   |> await
  │   -^ But this operator was encountered instead
  │   │ 
  │   This operator requires a right hand side value

error[SyntaxError]: expected an unary expression but instead found '|'
  ┌─ fsharp_style_pipeline_operator.js:3:3
  │
3 │   |> x => doubleSay(x, ', ')
  │   ^ Expected an unary expression here

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
  ┌─ fsharp_style_pipeline_operator.js:3:4
  │
3 │   |> x => doubleSay(x, ', ')
  │   -^ But this operator was encountered instead
  │   │ 
  │   This operator requires a right hand side value

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ fsharp_style_pipeline_operator.js:3:8
  │  
1 │ ┌ promise
2 │ │   |> await
3 │ │   |> x => doubleSay(x, ', ')
  │ │        ^^ An explicit or implicit semicolon is expected here...
  │ └─────────' ...Which is required to end this statement

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:12:4
   │
12 │   |> doubleSay
   │   -^ But this operator was encountered instead
   │   │ 
   │   This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:13:4
   │
13 │   |> capitalize
   │   -^ But this operator was encountered instead
   │   │ 
   │   This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:14:4
   │
14 │   |> exclaim;
   │   -^ But this operator was encountered instead
   │   │ 
   │   This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:17:4
   │
17 │   |> double
   │   -^ But this operator was encountered instead
   │   │ 
   │   This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:18:4
   │
18 │   |> n => add(7, n)
   │   -^ But this operator was encountered instead
   │   │ 
   │   This operator requires a right hand side value

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ fsharp_style_pipeline_operator.js:18:8
   │  
16 │ ┌ const newScore = person.score
17 │ │   |> double
18 │ │   |> n => add(7, n)
   │ │        ^^ An explicit or implicit semicolon is expected here...
   │ └───────' ...Which is required to end this statement

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:22:4
   │
22 │   |> api.get
   │   -^ But this operator was encountered instead
   │   │ 
   │   This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:23:4
   │
23 │   |> await
   │   -^ But this operator was encountered instead
   │   │ 
   │   This operator requires a right hand side value

error[SyntaxError]: expected an unary expression but instead found '|'
   ┌─ fsharp_style_pipeline_operator.js:24:3
   │
24 │   |> r => r.json()
   │   ^ Expected an unary expression here

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:24:4
   │
24 │   |> r => r.json()
   │   -^ But this operator was encountered instead
   │   │ 
   │   This operator requires a right hand side value

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ fsharp_style_pipeline_operator.js:24:8
   │  
21 │ ┌ const user = url
22 │ │   |> api.get
23 │ │   |> await
24 │ │   |> r => r.json()
   │ │        ^^ An explicit or implicit semicolon is expected here...
   │ └───────' ...Which is required to end this statement

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:28:22
   │
28 │ const f = (x) => (x |> (y) => y + 1)
   │                     -^ But this operator was encountered instead
   │                     │ 
   │                     This operator requires a right hand side value

error[SyntaxError]: expected `')'` but instead found `=>`
   ┌─ fsharp_style_pipeline_operator.js:28:28
   │
28 │ const f = (x) => (x |> (y) => y + 1)
   │                            ^^ unexpected

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:44:22
   │
44 │       return (y + 1 |> (z) => z * y);
   │                     -^ But this operator was encountered instead
   │                     │ 
   │                     This operator requires a right hand side value

error[SyntaxError]: expected `')'` but instead found `=>`
   ┌─ fsharp_style_pipeline_operator.js:44:28
   │
44 │       return (y + 1 |> (z) => z * y);
   │                            ^^ unexpected

error[SyntaxError]: Illegal return statement outside of a function
   ┌─ fsharp_style_pipeline_operator.js:44:7
   │
44 │       return (y + 1 |> (z) => z * y);
   │       ^^^^^^^^^^^^^^^^^^^^

error[SyntaxError]: expected a statement but instead found '=> z * y)'
   ┌─ fsharp_style_pipeline_operator.js:44:28
   │
44 │       return (y + 1 |> (z) => z * y);
   │                            ^^^^^^^^^ Expected a statement here

error[SyntaxError]: expected a statement but instead found ')

const f = x + ((f) => (f |> f))'
   ┌─ fsharp_style_pipeline_operator.js:46:3
   │  
46 │ ┌   )
47 │ │ 
48 │ │ const f = x + ((f) => (f |> f));
   │ └───────────────────────────────^ Expected a statement here

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:49:14
   │
49 │ const f = x |> (f) => f |> f;
   │             -^ But this operator was encountered instead
   │             │ 
   │             This operator requires a right hand side value

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
   ┌─ fsharp_style_pipeline_operator.js:49:20
   │
49 │ const f = x |> (f) => f |> f;
   │ -------------------^^ An explicit or implicit semicolon is expected here...
   │ │                   
   │ ...Which is required to end this statement


```


